# ChatA3D3

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: a3d3_webs.csv  failed_pdfs.csv  nsf_award_papers_filtered.csv
src/chata3d3/: config.py  main.py
src/chata3d3/loaders/: paper_nsf_loader.py  web_a3d3_loader.py
src/chata3d3/rag/: build_rag_vector_store.py
src/chata3d3/utils/: download_embedding_model.py  download_llm_model.py
